--- a/src/components/NavigationMenu/NavigationMenu.scss
+++ b/src/components/NavigationMenu/NavigationMenu.scss
@@ -2,8 +2,10 @@
 
 .navigation-menu-container {
   display: flex;
-  max-width: 200px;
+  flex-direction: column;
+  max-width: 250px;
   flex: 1;
   background-color: $backgroundLight;
   padding-top: 20px;
+  padding-left: 20px;
 }
