--- a/src/components/NavigationMenu/NavigationMenuItem.scss
+++ b/src/components/NavigationMenu/NavigationMenuItem.scss
@@ -5,11 +5,13 @@
   align-self: stretch;
   margin-top: 10px;
   margin-bottom: 10px;
+  flex-direction: column;
 }
 
-.main-row {
+.navigation-menu-item-row {
   display: flex;
-  flex-direction: row,
+  flex-direction: row;
+  padding-left: 20px;
 }
 
 .active-indicator-column {
@@ -28,20 +30,24 @@
 .title-column {
   flex: 5;
   text-align: left;
-  padding-left: 10px;
   justify-content: center;
   font-size: 20px;
 }
 
 .title-text {
   color: $white;
+  cursor: pointer;
+}
+
+.active {
+  color: $highlight;
 }
 
 .title-text:hover {
   color: $highlight;
-  cursor: pointer;
 }
 
-.children-container {
-  background-color: $backgroundDark
+.sub-menu-container {
+  padding-top: 10px;
+  padding-left: 60px;
 }
