--- a/src/components/Add/ActionButton.scss
+++ b/src/components/Add/ActionButton.scss
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: row;
   flex: 1;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
   padding-top: 3px;
 }
 
@@ -16,12 +16,35 @@
   flex-direction: column;
   flex: 1;
   text-align: center;
-  background-color: $backgroundLight;
   color: $white;
   cursor: pointer;
 }
 
+.light {
+  border: 2px solid $backgroundLight;
+  background-color: $backgroundLight;
+}
 
-.action-button:hover {
+.dark {
+  border: 2px solid $backgroundDark;
+  background-color: $backgroundDark;
+}
+
+.secondary-action-button-light {
+  border: 2px solid $backgroundLight;
+}
+
+.secondary-action-button-dark {
+  border: 2px solid $backgroundDark;
+}
+
+.dark:hover, .light:hover {
+  border: 2px solid $highlight;
   background-color: $highlight;
+}
+
+.secondary-action-button-dark:hover,
+.secondary-action-button-light:hover
+ {
+  border: 2px solid $highlight;
 }
