Adding monitored and details pages

--- a/src/components/Monitored/Add/ActionButton.scss
+++ b/src/components/Monitored/Add/ActionButton.scss
@@ -1,4 +1,4 @@
-@import '../../constants/colorCodes.scss';
+@import '../../../constants/colorCodes.scss';
 
 .action-button-container {
   display: flex;
