--- a/src/components/Shared/IndicatorCard.scss
+++ b/src/components/Shared/IndicatorCard.scss
@@ -28,6 +28,7 @@
   padding: 5px;
   justify-content: center;
   text-align: center;
+  padding-bottom: 20px;
 }
 
 .indicator-card-action-container {
