--- a/src/components/Monitored/Add/AddNewDetailsForm.scss
+++ b/src/components/Monitored/Add/AddNewDetailsForm.scss
@@ -1,4 +1,4 @@
-@import '../../constants/colorCodes';
+@import '../../../constants/colorCodes';
 
 .add-new-details-form-container {
   display: flex;
