Adding Dashboard page and module orginization changes

--- a/src/constants/colorCodes.scss
+++ b/src/constants/colorCodes.scss
@@ -1,7 +1,7 @@
-$backgroundDark: #313131;
-$backgroundLight: #414141;
-$backgroundHightlight: #afafaf;
-$textDark: #313131;
+$backgroundDark: #1A1A19;
+$backgroundMedium: #2A2A2A;
+$backgroundLight: #3A3A3A;
+$textDark: #444444;
 $textLight: #F3F1F5;
 $highlight: #CA3E47;
 $white: #ffffff;
