--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
   justify-content: flex-start;
   align-items: center;
   padding-left: 10px;
-  background-color: $highlight;
+  background-color: $backgroundMedium;
   z-index: 99;
 }
 
