--- a/src/components/Monitored/Details/DownloadedVideoList.scss
+++ b/src/components/Monitored/Details/DownloadedVideoList.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   flex: 2;
-  background-color: $backgroundLight;
+  background-color: $backgroundMedium;
 }
 
 .list-row {
@@ -18,9 +18,9 @@
 }
 
 .header {
-  background-color: $backgroundHightlight;
+  background-color: $backgroundLight;
 }
 
 .header-value {
-  color: $textDark
+  color: $textLight
 }
