--- a/src/components/Monitored/Details/SummaryHeader.scss
+++ b/src/components/Monitored/Details/SummaryHeader.scss
@@ -30,7 +30,6 @@
   border-radius: 20px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0px 2px 1px $black;
 }
 
 .details-no-thumbnail-icon {
@@ -61,6 +60,7 @@
   padding: 5px;
   margin-right: 20px;
   flex-direction: row;
+  border-radius: 5px;
   background-color: $backgroundLight;
   color: $white;
 };
