--- a/src/components/Shared/MonitoredItemCard.scss
+++ b/src/components/Shared/MonitoredItemCard.scss
@@ -1,4 +1,4 @@
-@import '../../../constants/colorCodes';
+@import '../../constants/colorCodes';
 
 .monitored-item-container {
   display: flex;
@@ -41,12 +41,11 @@
   flex: 3;
   padding-top: 10px;
   flex-direction: column;
-  background-color: $backgroundHightlight;
+  background-color: $backgroundLight;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  box-shadow: 0px 2px 1px $black;
 }
 
 .monitored-item-detail-row {
@@ -56,12 +55,12 @@
 }
 
 .name {
-  color: $black;
+  color: $white;
   margin-top: 2px;
 }
 
 .sourceKey {
-  color: $textDark;
+  color: $textLight;
   margin-top: 2px;
   font-size: 12px;
 }
@@ -78,5 +77,5 @@
   text-align: right;
   font-size: 12px;
   padding-right: 7px;
-  color: $textDark;
+  color: $textLight;
 }
